--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -11,6 +11,7 @@
     justify-content: center;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
     position: relative;
+    margin-top: 100px;
   }
   
   .footer p {
