--- a/src/global.css
+++ b/src/global.css
@@ -115,3 +115,29 @@ body {
     }
   }
   
+  /*  LoadingScreen.css */
+
+.loading-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #1CB5E0; /* Background color */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  transition: opacity 1s ease; /* Smooth fade transition */
+}
+
+
+.tc-text {
+  font-size: 5rem;
+  font-weight: bold;
+  color: #fff;
+  text-transform: uppercase;
+  font-family: 'Nunito', sans-serif;
+  letter-spacing: 10px;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+}
