--- a/src/components/OfferSection.css
+++ b/src/components/OfferSection.css
@@ -9,7 +9,8 @@
     font-size: 36px;
     color: #333;
     text-align: left;
-    margin-bottom: 20px;
+    margin-bottom: 60px;
+    margin-top: 40px;
   }
   
   .offer-content {
@@ -50,7 +51,8 @@
     object-fit: cover;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     transition: box-shadow 0.3s ease-in-out;
-    border-radius: 8px;
+    margin-top: -100px;
+    
   }
   
   .offer-image:hover {
