--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -19,8 +19,8 @@
   z-index: 2;
   text-align: center;
   color: transparent; /* Remove Fill */
-  -webkit-text-stroke: 2px #FFB38E; /* Stroke Effect */
-  text-stroke: 2px #FFB38E;
+  -webkit-text-stroke: 2px #690B22; /* Stroke Effect */
+  
   
 }
 
