--- a/src/components/SkillsSection.css
+++ b/src/components/SkillsSection.css
@@ -79,7 +79,7 @@
   margin-top: 10px;
   font-size: 1rem;
   font-weight: 600;
-  color: #fff;
+  color: #690B22;
 }
 
 /* Pop-up Effect on Click */
