--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -3,8 +3,8 @@
     color: #fff;
     padding: 20px;
     border-radius: 10px;
-    text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: left;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease;
   }
   
@@ -12,6 +12,8 @@
     width: 50px;
     height: 50px;
     margin-bottom: 15px;
+    
+    
   }
   
   .card-title {
