--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -20,6 +20,7 @@
   text-align: center;
   color: transparent; /* Remove Fill */
   -webkit-text-stroke: 2px #690B22; /* Stroke Effect */
+  font-family: "Nunito", sans-serif;
   
   
 }
